Добавлен сервер, отвечающий на HTTP и слушающий MQTT.

--- a/DistanceMonitoring.Mock/DistanceMonitoring.Mock.fsproj
+++ b/DistanceMonitoring.Mock/DistanceMonitoring.Mock.fsproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DistanceMonitoring.Data\DistanceMonitoring.Data.fsproj" />
+    <ProjectReference Include="..\DistanceMonitoring.Utils\DistanceMonitoring.Utils.fsproj" />
   </ItemGroup>
 
 </Project>
