--- a/DistanceMonitoring.Web/DistanceMonitoring.Web.fsproj
+++ b/DistanceMonitoring.Web/DistanceMonitoring.Web.fsproj
@@ -13,8 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="Services/PositionCalculator.fs" />
+    <Compile Include="Models.fs" />
     <Compile Include="Services/MqttServer.fs" />
+    <Compile Include="Services/PositionCalculator.fs" />
+    <Compile Include="Services/DeviceData.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
