--- a/DistanceMonitoring.CLI/DistanceMonitoring.CLI.fsproj
+++ b/DistanceMonitoring.CLI/DistanceMonitoring.CLI.fsproj
@@ -19,6 +19,9 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.8.0" />
+    <PackageReference Include="Fsharp.Json" Version="0.4.0" />
+    <PackageReference Include="Hopac" Version="0.5.0" />
+    <PackageReference Include="Http.fs" Version="5.4.0" />
     <PackageReference Include="MQTTnet" Version="3.0.13" />
   </ItemGroup>
 
