--- a/DistanceMonitoring.Data/DistanceMonitoring.Data.fsproj
+++ b/DistanceMonitoring.Data/DistanceMonitoring.Data.fsproj
@@ -1,14 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
-    <Compile Include="Library.fs"/>
+    <Compile Include="CommonTypes.fs" />
+    <Compile Include="Serializer.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Json" Version="0.4.0" />
   </ItemGroup>
-
 </Project>
